--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
 PORT=3333
 HOST=0.0.0.0
 NODE_ENV=development
-APP_KEY=prOrbiSA49cbdlGdb3OS535kK3C-hryK
+APP_KEY=XCfgdFX8UWTXHGURFYx3OoAbmXyJLjTe
 DRIVE_DISK=local
+DB_CONNECTION=pg
+PG_HOST=localhost
+PG_PORT=5432
+PG_USER=lucid
+PG_PASSWORD=
+PG_DB_NAME=lucid
+DEFAULT_PAGE=1
+DEFAULT_PAGE_LIMIT=20
